[package]
name = "jstz_kernel"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bincode.workspace = true
boa_engine.workspace = true
http-serde.workspace = true
http.workspace = true
jstz_api = { path = "../jstz_api" }
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
jstz_proto = { path = "../jstz_proto" }
num-traits.workspace = true
serde.workspace = true
tezos-smart-rollup.workspace = true
tezos-smart-rollup-host.workspace = true
tezos_crypto_rs.workspace = true
tezos_data_encoding = "0.6.0"

[dev-dependencies]
jstz_mock = { path = "../jstz_mock" }
