[package]
name = "jstz_macro"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
syn = "2.0.95"
quote = "1.0.38"

[lib]
proc-macro = true
