[package]
name = "jstz_message_creator"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description = "Binary for creating Jstz messages"

[[bin]]
name = "jstz_message_creator"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
bincode.workspace = true
hex.workspace = true
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
jstz_proto = { path = "../jstz_proto" }
jstz_node = { path = "../jstz_node" }
serde_json.workspace = true 
tezos-smart-rollup.workspace = true
tezos_crypto_rs.workspace = true
tezos_data_encoding.workspace = true