[package]
name = "jstz_mock"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
derive_more.workspace = true
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
tezos-smart-rollup-mock.workspace = true
tezos-smart-rollup.workspace = true
tezos_crypto_rs.workspace = true
