[package]
name = "jstz_node"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.0"
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "^4.5", features = ["derive"] }
env_logger = "0.11.1"
futures-util = "0.3.30"
hex = "0.4.3"
jstz_proto.workspace = true
jstz_crypto.workspace = true
jstz_api.workspace = true
octez.workspace = true
parking_lot = "0.12.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.56"
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
serde_json = "1.0.105"
dirs = "3.0"
log = "0.4.20"
r2d2 = {version = "0.8", optional = true}
r2d2_sqlite = {version = "0.22", optional = true}
rusqlite = {version = "0.29", optional = true}
actix-cors = "0.6.5"
base64 = "0.13.1"
tezos-smart-rollup.workspace = true
tezos-smart-rollup-encoding.workspace = true
tezos_data_encoding = "0.5.2"
tezos_crypto_rs.workspace = true

[[bin]]
name = "jstz-node"
path = "src/main.rs"

[features]
persistent-logging = ["dep:r2d2", "dep:r2d2_sqlite", "dep:rusqlite"]
