[package]
name = "jstz_node"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true
include = ["openapi.json", "src", "tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
async-dropper-simple.workspace = true
async-trait.workspace = true
axum.workspace = true
bincode.workspace = true
bytes.workspace = true
clap.workspace = true
dirs.workspace = true
derive_more.workspace = true
env_logger.workspace = true
futures-util.workspace = true
hex.workspace = true
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
jstz_proto = { path = "../jstz_proto", features = ["kernel"] }
jstz_utils = { path = "../jstz_utils" }
jstz_kernel = { path = "../kernels/jstz_kernel" }

log.workspace = true
mockito.workspace = true
num-traits.workspace = true
octez = { path = "../octez" }
octez-riscv.workspace = true
parking_lot.workspace = true
pin-project.workspace = true
r2d2.workspace = true
r2d2_sqlite.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tezos-smart-rollup.workspace = true
tezos_crypto_rs.workspace = true
tezos_data_encoding.workspace = true
thiserror.workspace = true
tokio-retry2.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
pretty_assertions.workspace = true
warp.workspace = true
http.workspace = true
jstz_mock = { path = "../jstz_mock" }
jstz_utils = { path = "../jstz_utils", features = ["test_utils", "inbox_builder"] }

[[bin]]
name = "jstz-node"
path = "src/main.rs"

[features]
persistent-logging = []
v2_runtime = ["jstz_proto/v2_runtime", "jstz_kernel/v2_runtime"]
blueprint = []
oracle = ["v2_runtime"]
inject_inbox = []
riscv_test = []
timeout = ["jstz_proto/timeout"]
