[package]
name = "jstz_oracle_node"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
futures.workspace = true
futures-core.workspace = true
tokio.workspace = true
regex.workspace = true
serde.workspace = true
bytes.workspace = true
tempfile.workspace = true
rand.workspace = true
futures-util.workspace = true
tokio-util.workspace = true
once_cell.workspace = true
http.workspace = true
hyper.workspace = true
reqwest.workspace = true
log.workspace = true
tokio-retry2.workspace = true
bincode.workspace = true
serde_bytes.workspace = true
url.workspace = true
jstz_core = { path = "../jstz_core" }
jstz_utils = { path = "../jstz_utils" }
jstz_proto = { path = "../jstz_proto"}
jstz_crypto = { path = "../jstz_crypto" }
jstz_client = { path = "../jstz_client" }
serde_json.workspace = true
octez = { path = "../octez" }

[dev-dependencies]
mockito.workspace = true

[features]
v2_runtime = ["jstz_proto/v2_runtime"]
