[package]
name = "jstz_proto"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true
exclude = [ "src/runtime/v2/tests" ]

[dependencies]
bincode.workspace = true
boa_engine.workspace = true
boa_gc.workspace = true
bytes.workspace = true
derive_more.workspace = true
either.workspace = true
erased-serde.workspace = true
http-serde.workspace = true
http.workspace = true
jstz_api = { path = "../jstz_api" }
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
serde.workspace = true
serde_json.workspace = true
tezos_crypto_rs.workspace = true
tezos_data_encoding.workspace = true
tezos-smart-rollup.workspace = true
utoipa.workspace = true
futures.workspace = true

# Required by v2 runtime
deno_core = { workspace = true, optional = true }
deno_error = { workspace = true, optional = true }
deno_fetch_base = { workspace = true, optional = true }
jstz_runtime = { path = "../jstz_runtime", optional = true }
jstz_utils = { path = "../jstz_utils", optional = true }
tokio = { workspace = true, optional = true }
parking_lot.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
jstz_mock = { path = "../jstz_mock" }
jstz_utils = { path = "../jstz_utils" }
tezos-smart-rollup-mock.workspace = true
bincode.workspace = true
tokio.workspace = true

[features]
riscv = ["dep:jstz_runtime", "dep:deno_core", "dep:deno_fetch_base", "dep:deno_error", "dep:tokio"]
v2_runtime = ["riscv", "dep:jstz_utils"]
kernel = ["jstz_runtime?/kernel"]

