[package]
name = "jstz_proto"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true
exclude = [ "src/runtime/v2/tests" ]

[dependencies]
bincode.workspace = true
boa_engine.workspace = true
boa_gc.workspace = true
bytes.workspace = true
derive_more.workspace = true
either.workspace = true
erased-serde.workspace = true
futures.workspace = true
http-serde.workspace = true
http.workspace = true
nom.workspace = true
jstz_api = { path = "../jstz_api", optional = true }
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
serde_with.workspace = true
tezos_crypto_rs.workspace = true
tezos_data_encoding.workspace = true
tezos-smart-rollup.workspace = true
utoipa.workspace = true

# Required by v2 runtime
deno_core = { workspace = true, optional = true }
deno_error = { workspace = true, optional = true }
deno_fetch_base = { workspace = true, optional = true }
jstz_runtime = { path = "../jstz_runtime", optional = true }
parking_lot.workspace = true
thiserror.workspace = true
url.workspace = true

[target.'cfg(not(any(target_arch="riscv64", target_arch="wasm32")))'.dependencies]
tokio = { workspace = true, optional = true }


[dev-dependencies]
bincode.workspace = true
jstz_mock = { path = "../jstz_mock" }
jstz_utils = { path = "../jstz_utils", features = ["test_utils"] }
tezos-smart-rollup-mock.workspace = true
tokio.workspace = true

[features]
default = ["dep:jstz_api"]
v2_runtime = ["dep:jstz_runtime", "dep:deno_core", "dep:deno_fetch_base", "dep:deno_error"]
kernel = ["jstz_runtime?/kernel"]
timeout = ["dep:tokio", "jstz_core/unsafe_async_host"]
