[package]
name = "jstz_rollup"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
octez.workspace = true
tezos-smart-rollup-installer-config = { version = "0.2.2", features = [
    "alloc",
] }
tezos-smart-rollup-installer.workspace = true
tezos-smart-rollup-host.workspace = true
hex = "0.4.3"
tezos_crypto_rs.workspace = true
bincode = "1.3.3"
fs_extra = "1.3.0"
figment = { version = "0.10.12", features = ["json", "env"] }
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.108"
dirs = "3.0"

[[bin]]
name = "jstz-rollup"
path = "src/main.rs"
