[package]
name = "jstz_rollup"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap.workspace = true
derive_more.workspace = true
dirs.workspace = true
figment.workspace = true 
fs_extra.workspace = true
hex.workspace = true
octez = { path = "../octez" }
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tezos-smart-rollup.workspace = true
tezos-smart-rollup-installer-config.workspace = true
tezos-smart-rollup-installer.workspace = true
tezos_crypto_rs.workspace = true

[[bin]]
name = "jstz-rollup"
path = "src/main.rs"
