[package]
name = "jstz_runtime"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description = "Javascript runtime for Jstz"

[dependencies]
bincode.workspace = true
deno_core.workspace = true
deno_console.workspace = true
# jstz_core = { path = "../jstz_core" }
# jstz_crypto = { path = "../jstz_crypto" }
serde.workspace = true
serde_json.workspace = true
tezos-smart-rollup.workspace = true
# tezos-smart-rollup-host.workspace = true
utoipa.workspace = true
thiserror.workspace = true
tokio.workspace = true
deno_webidl.workspace = true
deno_web.workspace = true
deno_url.workspace = true
log.workspace = true
tezos-smart-rollup-mock.workspace = true

[dev-dependencies]
anyhow.workspace = true
deno_error.workspace = true
derive_more.workspace = true
jstz_wpt = { path = "../jstz_wpt" }
serde_json.workspace = true
tezos-smart-rollup-mock.workspace = true
tokio.workspace = true

[features]
skip-wpt = []

[[bin]]
name = "jstz_test_kernel3"
path = "test_kernel/src/main.rs"