[package]
name = "jstz_runtime"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description = "Javascript runtime for Jstz"

[dependencies]
bincode.workspace = true
deno_core.workspace = true
deno_console.workspace = true
derive_more = { workspace = true, features = ["deref", "deref_mut", "from"] }
jstz_core = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
serde.workspace = true
serde_json.workspace = true
tezos-smart-rollup.workspace = true
tezos-smart-rollup-host.workspace = true
utoipa.workspace = true
thiserror.workspace = true
tokio.workspace = true
deno_webidl.workspace = true
deno_web.workspace = true
deno_url.workspace = true
deno_error.workspace = true
deno_fetch_base.workspace = true
parking_lot.workspace = true
pin-project.workspace = true

[dev-dependencies]
anyhow.workspace = true
derive_more.workspace = true
jstz_wpt = { path = "../jstz_wpt" }
jstz_utils = { path = "../jstz_utils" }
regex.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
tezos-smart-rollup-mock.workspace = true

[features]
skip-wpt = []
