[package]
name = "jstz_sdk"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
jstz_crypto = { path = "../jstz_crypto" }
jstz_proto = { path = "../jstz_proto" }
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
