[package]
name = "jstz_tps_bench"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
base64.workspace = true
boa_gc.workspace = true
http.workspace = true
bincode.workspace = true
regex.workspace = true
serde_json.workspace = true
jstz_kernel = { path = "../jstz_kernel" }
jstz_crypto = { path = "../jstz_crypto" }
jstz_proto = { path = "../jstz_proto" }
tezos-smart-rollup.workspace = true
tezos-smart-rollup-core.workspace = true
tezos_crypto_rs.workspace = true
tezos_data_encoding.workspace = true
serde.workspace = true
hex.workspace = true
clap.workspace = true

[features]
default = ["tezos-smart-rollup/utils", "tezos-smart-rollup/extra"]
static-inbox = ["tezos-smart-rollup/native-kernel"]

[[bin]]
name = "bench"
path = "src/bench/main.rs"

[[bin]]
name = "kernel"
path = "src/kernel/main.rs"
