[package]
name = "jstz_tps_bench"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
http.workspace = true
bincode.workspace = true
bip39.workspace = true
regex.workspace = true
serde_json.workspace = true
jstz_proto = { path = "../jstz_proto" }
jstz_utils = { path = "../jstz_utils" }
tezos-smart-rollup = { workspace = true, features =  ["utils"] }
tezos_crypto_rs.workspace = true
tezos_data_encoding.workspace = true
serde.workspace = true
clap.workspace = true

[features]
v2_runtime = ["jstz_proto/v2_runtime", "jstz_utils/v2_runtime"]

[[bin]]
name = "bench"
path = "src/main.rs"

[[bin]]
name = "all_operations"
path = "src/bin/all_operations.rs"
required-features = ["v2_runtime"]
