[package]
name = "jstz_utils"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description = "Utility functions"

[dependencies]
anyhow.workspace = true
jstz_crypto = { path = "../jstz_crypto" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
