[package]
name = "jstz_utils"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description = "Utility functions"

[dependencies]
anyhow.workspace = true
futures.workspace = true
futures-core.workspace = true
jstz_core   = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
log.workspace = true
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true

[dev-dependencies]
futures-util.workspace = true
tempfile.workspace = true
url.workspace = true