[package]
name = "jstz_utils"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
license-file.workspace = true
description = "Utility functions"

[dependencies]
anyhow.workspace = true
futures.workspace = true
futures-core.workspace = true
http = { workspace = true, optional = true }
jstz_core   = { path = "../jstz_core" }
jstz_crypto = { path = "../jstz_crypto" }
jstz_proto = { path = "../jstz_proto", optional = true }
log.workspace = true
reqwest.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
tezos-smart-rollup = { workspace = true, features =  ["utils"], optional = true }
tezos-smart-rollup-mock = { workspace = true, optional = true }
tezos_crypto_rs.workspace = true
tezos_data_encoding = { workspace = true, optional = true }
tokio.workspace = true
tokio-retry2.workspace = true
tokio-util.workspace = true

[dev-dependencies]
futures-util.workspace = true
tempfile.workspace = true
url.workspace = true

[features]
v2_runtime = ["jstz_proto?/v2_runtime"]
inbox_builder = ["dep:jstz_proto", "dep:http", "dep:tezos-smart-rollup", "dep:tezos_data_encoding"]
test_utils = ["dep:tezos-smart-rollup-mock"]
